--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -10,7 +10,23 @@ on:
     branches: [ master ]
 
 jobs:
-  Testing:
+  Python1:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v3
+    - name: Set up Python 3.8.10
+      uses: actions/setup-python@v3
+      with:
+        python-version: "3.8.10"
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+    - name: Run run_python.py file
+      run: |
+        python run_python.py
+
+  Python2:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,9 +39,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Run run_python.py file
-      run: |
-        python run_python.py
     - name: Run run_np.py file
       run: |
         python run_np.py 1,2,3 5,6,7
